k8s/05_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: netatmo-api
  namespace: netatmo-api
  labels:
    app: netatmo-api
    app.kubernetes.io/name: netatmo-api
    app.kubernetes.io/instance: netatmo-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
  selector:
    app: netatmo-api
