k8s/04_networkPolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: netatmo-api
  namespace: netatmo-api
spec:
  endpointSelector:
    matchLabels:
      app: netatmo-api
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toServices:
        - k8sService:
            serviceName: mqtt
            namespace: vernemq
      toPorts:
        - ports:
            - port: "1883"
              protocol: TCP
            - port: "8883"
              protocol: TCP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
